// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Port Type Registry Snapshots > should match builtin port types snapshot 1`] = `
[
  "audio",
  "clock",
  "control",
  "gate",
  "midi",
  "notes",
  "transport",
  "trigger",
]
`;

exports[`Port Type Registry Snapshots > should match port compatibility matrix snapshot 1`] = `
[
  {
    "compatible": true,
    "from": "audio",
    "to": "audio",
  },
  {
    "compatible": true,
    "from": "midi",
    "to": "midi",
  },
  {
    "compatible": true,
    "from": "notes",
    "requiresAdapter": true,
    "to": "midi",
  },
  {
    "compatible": true,
    "from": "notes",
    "to": "notes",
  },
  {
    "compatible": true,
    "from": "control",
    "to": "control",
  },
  {
    "compatible": true,
    "from": "trigger",
    "to": "trigger",
  },
  {
    "compatible": true,
    "from": "gate",
    "to": "gate",
  },
  {
    "compatible": true,
    "from": "clock",
    "to": "clock",
  },
  {
    "compatible": true,
    "from": "transport",
    "to": "transport",
  },
  {
    "compatible": false,
    "from": "audio",
    "to": "midi",
  },
  {
    "compatible": false,
    "from": "midi",
    "to": "audio",
  },
  {
    "compatible": true,
    "from": "trigger",
    "to": "gate",
  },
  {
    "compatible": true,
    "from": "gate",
    "to": "trigger",
  },
]
`;

exports[`Port Type Registry Snapshots > should match port type metadata snapshot 1`] = `
[
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "any",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "audio",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "boolean",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "clock",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "container",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "control",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "gate",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "midi",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "notes",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "number",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "pattern",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "stream",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "string",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "transport",
  },
  {
    "hasColor": true,
    "hasIcon": true,
    "hasLabel": false,
    "hasMetadata": true,
    "isBuiltin": true,
    "isDeprecated": false,
    "portType": "trigger",
  },
]
`;

exports[`Port Type Registry Snapshots > should match registered port types snapshot 1`] = `
[
  "any",
  "audio",
  "boolean",
  "clock",
  "container",
  "control",
  "gate",
  "midi",
  "notes",
  "number",
  "pattern",
  "stream",
  "string",
  "transport",
  "trigger",
]
`;
